<fix>media_overflow

--- a/app/frontend/stylesheets/video.scss
+++ b/app/frontend/stylesheets/video.scss
@@ -56,6 +56,7 @@
           box-sizing: border-box;
           margin-bottom: 15px;
           border-radius: 5px;
+          overflow: auto;
           .remoteVideo{
             width: 33.3333333%;
             min-width: 164px;
